1. Start a new spreadsheet document. 2. Type some values into cells. 3. Go to File > Properties and turn to the Statistics page. 4. The number of cells remains 0, but it shouldn't.
confirming
Kohei Yoshida committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ce7ba209d28cd284ab5ea584bc130d7a081b0f9 fdo#73986: Don't forget to receive returned object from for_each. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Kohei Yoshida committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=228cd29a48374833bbe305a434f7149a0ef3ddd1 fdo#73986: Write unit test for document statistics. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
I'm on it.
Interesting side effect is that, when saving to ods, we store the number of cells to the file. When loading that file subsequently, we do use this information to control progress bar increment rate. With this value being 0, the progress bar would all of a sudden start going back and forth at a very rapid rate.
Kohei Yoshida committed a patch related to this issue. It has been pushed to "libreoffice-4-2": http://cgit.freedesktop.org/libreoffice/core/commit/?id=09048f24e2a978b043ce5ce8d076721d48ea9342&h=libreoffice-4-2 fdo#73986: Don't forget to receive returned object from for_each. It will be available in LibreOffice 4.2.1. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Fixed.