fdo#73986: Don't forget to receive returned object from for_each.

Change-Id: Ia4ccb83c45ea3ce72a8e5c62a560ab1802bb2441
(cherry picked from commit 9ce7ba209d28cd284ab5ea584bc130d7a081b0f9)